--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,16 @@
         android:theme="@style/Theme.Onlinefood"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".Activity.TaiKhoanActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.LichSuActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.DonHangActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
