--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Onlinefood"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.TTTaiKhoanActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activity.TaiKhoanActivity"
             android:exported="false" />
         <activity
