--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,9 +25,6 @@
             android:name=".Activity.CTNhaHangActivity"
             android:exported="false" />
         <activity
-            android:name=".Activity.LoginActivity"
-            android:exported="false" />
-        <activity
             android:name=".Activity.TTTaiKhoanActivity"
             android:exported="false" />
         <activity
@@ -38,6 +35,12 @@
             android:exported="false" />
         <activity
             android:name=".Activity.DonHangActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.DatHangActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.DiaChiActivity"
             android:exported="false" />
         <activity
             android:name=".Activity.MainActivity"
