them chuc nang tim kiem(main, nhahang)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,11 @@
         <activity
             android:name=".Activity.DonHangActivity"
             android:exported="false" />
+        <activity android:name=".Activity.TimkiemNhaHang"
+            android:exported="false" />
+        <activity android:name=".Activity.TimKiemMonAn"
+            android:exported="false" />
+
         <activity
             android:name=".Activity.MainActivity"
             android:exported="true">
