--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,12 @@
         <activity
             android:name=".Activity.DonHangActivity"
             android:exported="false" />
+
+        <activity android:name=".Activity.TimkiemNhaHang"
+            android:exported="false" />
+        <activity android:name=".Activity.TimKiemMonAn"
+            android:exported="false" />
+
         <activity
             android:name=".Activity.DatHangActivity"
             android:exported="false" />
