fix bug thanh toan khi nhan hang va them chi tiet don hang

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
             android:name=".Activity.TaiKhoanActivity"
             android:exported="false" />
         <activity
+            android:name=".Activity.CTDonHangActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activity.LichSuActivity"
             android:exported="false" />
         <activity
